--- a/Ecu911/Pages/ChangePassword.razor
+++ b/Ecu911/Pages/ChangePassword.razor
@@ -4,11 +4,11 @@
 
 <PageTitle>Cambio de Contraseña</PageTitle>
 <MudText Align="Align.Left" Typo="Typo.h3">Cambio de Contraseña</MudText>
-
+<MudPaper Class="pa-16 ma-2 d-flex  flex-column  align-center" Elevation="3" >
 <EditForm Model="@request">
-    <MudGrid Style="padding:50px">
+    <MudGrid >
 
-        <MudItem xs="12" sm="6" md="6">
+        <MudItem xs="12" sm="12" md="12">
             <MudTextField T="string" @bind-Value="request.OldPassword" Label="Contraseña Actual" Variant="Variant.Text" Lines="1"/>
             
             <MudTextField T="string" Label="Nueva Contraseña" HelperText="Ingrese una contraseña fuerte" @ref="password"
@@ -29,8 +29,17 @@
         </MudButton>
 
     </MudContainer>
-</EditForm>
 
+   
+</EditForm>
+</MudPaper>
+
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
     private ChangePasswordRequest request = new();
 
