--- a/Ecu911/Pages/ActualizarProceso.razor
+++ b/Ecu911/Pages/ActualizarProceso.razor
@@ -3,7 +3,7 @@
 <PageTitle>Actualizar Proceso</PageTitle>
 
 <MudText Align="Align.Center" Typo="Typo.h3">Actualizar Proceso </MudText>
-
+<MudPaper Class="pa-16 ma-2" Elevation="3">
 <EditForm Model="@regisupdt">
     <MudGrid Style="padding:50px">
 
@@ -93,13 +93,25 @@
     </MudGrid>
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
         <MudButton OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Medium">
-            <MudNavLink Href="" Match="NavLinkMatch.All">Guardar Proceso</MudNavLink>
+           Actualizar Proceso
         </MudButton>
 
     </MudContainer>
 
 
 </EditForm>
+</MudPaper>
+<MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
+    <MudButton OnClick="NavigateInicio" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
+        <MudText> Regresar</MudText>
+    </MudButton>
+</MudContainer>
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
 
     private ProcesoCompra registro = new();
@@ -254,6 +266,9 @@
  
 
     }
-
+    void NavigateInicio()
+    {
+        navManager.NavigateTo($"/");
+    }
 
 }
