--- a/Ecu911/Pages/AlertasProceso.razor
+++ b/Ecu911/Pages/AlertasProceso.razor
@@ -7,12 +7,7 @@
     <MudText Class="mb-12">alertas encontradas</MudText>
     <MudItem xs="12" sm="12" md="12" Class="d-flex  flex-column  align-center" >
     <MudGrid>
-            <MudSimpleTable Hover="true" Dense="true">
-            <thead>
-                <tr>
-                    <th>alerta </th>
-                </tr>
-            </thead>
+            <MudSimpleTable Hover="true" Dense="true" >
             <tbody>
                 @foreach (var item in alertas)
                 {
@@ -25,11 +20,10 @@
         </MudSimpleTable>
     </MudGrid>
     </MudItem>
-    <MudItem xs="12" sm="12" md="12" Class="d-flex flex-column justify-center" Style="padding:30px">
-        <MudText Typo="Typo.h3" GutterBottom="true">Ingresar alertas</MudText>
-    </MudItem>
+   
    
 </MudCardContent>
+<MudPaper Class="pa-16 ma-2" Elevation="3">
 
 <EditForm Model="@alerta">
    
@@ -38,17 +32,24 @@
     </MudItem>
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
         <MudButton  OnClick="agregarAlerta" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
-                <MudText> Guardar Observacion</MudText>
+            <MudText> Guardar alerta</MudText>
         </MudButton>
     </MudContainer>
-    <MudContainer>
-            <MudButton OnClick="NavigateInicio" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
-            <MudText> Regresar</MudText>
-        </MudButton>
-    </MudContainer>
+
 </EditForm>
+</MudPaper>
 
-
+<MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
+    <MudButton OnClick="NavigateInicio" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
+        <MudText> Regresar</MudText>
+    </MudButton>
+</MudContainer>
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 
 @code {
 
@@ -59,7 +60,7 @@
     private List<AlertaDSPPP> alertas = new();
 
     [Parameter]
-    private string Proceso { get; set; }
+    public string Proceso { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
