--- a/Ecu911/Pages/CrearProceso.razor
+++ b/Ecu911/Pages/CrearProceso.razor
@@ -3,7 +3,7 @@
 <PageTitle>Crear Proceso</PageTitle>
 
 <MudText Align="Align.Center" Typo="Typo.h3"> Crear Proceso </MudText>
-
+<MudPaper Class="pa-16 ma-2" Elevation="3">
 <EditForm Model="@registro">
     <MudGrid Style="padding:50px">
 
@@ -91,13 +91,26 @@
     </MudGrid>
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
         <MudButton OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Medium">
-            @*<MudNavLink Href="Index" Match="NavLinkMatch.Prefix"></MudNavLink>*@Guardar Proceso
+           @* <MudNavLink Href="Index" Match="NavLinkMatch.Prefix"></MudNavLink>*@Guardar Proceso
         </MudButton>
 
     </MudContainer>
 
 
 </EditForm>
+ </MudPaper>
+
+<MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
+    <MudButton OnClick="NavigateInicio" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
+        <MudText> Regresar Inicio</MudText>
+    </MudButton>
+</MudContainer>
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
  
    private ProcesoCompra registro = new(); 
@@ -219,9 +232,6 @@
             response.EnsureSuccessStatusCode();
             var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
             snackBar.Add("Proceso agregado!", Severity.Success);
-
-            navManager.NavigateTo($"Index");
-
         }
         catch (HttpRequestException)
         {
@@ -230,9 +240,11 @@
             snackBar.Add($"{data.Message}", Severity.Error);
         }
 
-
     }
-
+    void NavigateInicio()
+    {
+        navManager.NavigateTo($"/");
+    }
 
 }
 
