--- a/Ecu911/Pages/CrearUsuario.razor
+++ b/Ecu911/Pages/CrearUsuario.razor
@@ -2,6 +2,7 @@
 @using FluentValidation
 
 <PageTitle>Crear Usuario</PageTitle>
+
 <MudText Align="Align.Left" Typo="Typo.h3">Registrar Nuevo Usuario</MudText>
 
 <EditForm Model="@registro" OnValidSubmit="RegistrarUsuario">
@@ -22,7 +23,14 @@
     <MudText Typo="Typo.subtitle1">@newPassword</MudText>
 
 
-</EditForm>
+</EditForm> 
+
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
 
     private UserRegisterRequest registro = new();
