--- a/Ecu911/Pages/EliminarUsuarioSuper.razor
+++ b/Ecu911/Pages/EliminarUsuarioSuper.razor
@@ -21,7 +21,12 @@
     </MudButton>
 
 </MudContainer>
-
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
 
     private List<User> Usuarios = new();
