--- a/Ecu911/Pages/EtapaContractual.razor
+++ b/Ecu911/Pages/EtapaContractual.razor
@@ -1,10 +1,12 @@
 ﻿@page "/etapacontractual"
-@page "/etapacontractual/{Id}"
+@page "/etapacontractual/{id}"
 
 
 
 <PageTitle>Etapa Contractual</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3">Etapa Contractual</MudText>
+<MudPaper Class="pa-16 ma-2" Elevation="3">
+
 <EditForm Model="@registro" >
 
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
@@ -24,16 +26,29 @@
         
         </MudButton>
 </MudContainer>
+</MudPaper>
 
+<MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
+    <MudButton OnClick="NavigateEstados" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
+        <MudText> Regresar</MudText>
+    </MudButton>
+</MudContainer>
 
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
     private ProcesoCompra updateproceso = new();
     private Contractual registro = new();
     private bool _procesando = false;
     [Parameter]
-    public string Id { get; set; }
+    public string id { get; set; }
 
-
+    //[Parameter]
+    //public string Id { get; set; }
     protected async void Subir()
     {
         HttpResponseMessage? response = new();
@@ -41,7 +56,7 @@
         try
         {
 
-            registro.IdPrecontractual = Id;
+            registro.IdPrecontractual = id;
             response = await apiService.HttpClient.PostAsJsonAsync("Contractual", registro);
         }
         catch (HttpRequestException)
@@ -53,7 +68,7 @@
         {
             response.EnsureSuccessStatusCode();
             var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
-            snackBar.Add("Proceso agregado!", Severity.Success);
+            snackBar.Add("Etapa  actualizada!", Severity.Success);
 
         }
         catch (HttpRequestException)
@@ -63,5 +78,11 @@
         }
 
     }
-    
+    protected async void NavigateEstados()
+    {
+
+        var IDd = await sessionStorage.GetItemAsync<string>("Id-prepatoria");
+
+        navManager.NavigateTo($"EstadosProcesoRevision/{IDd}");
+    }
 }
