--- a/Ecu911/Pages/EtapaPreparatoria.razor
+++ b/Ecu911/Pages/EtapaPreparatoria.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Etapa Preparatoria</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3">Etapa Preparatoria</MudText>
-
+<MudPaper Class="pa-16 ma-2" Elevation="3">
 <EditForm Model="@registro">
     <MudGrid Style="padding:50px">
 
@@ -74,6 +74,21 @@
 
     </MudButton>
 </MudContainer>
+
+</MudPaper>
+
+<MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
+    <MudButton OnClick="NavigateEstados" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
+        <MudText> Regresar</MudText>
+    </MudButton>
+</MudContainer>
+
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 @code {
 
     private Preparatoria registro = new();
@@ -102,7 +117,7 @@
         {
             response.EnsureSuccessStatusCode();
             var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
-            snackBar.Add("Proceso agregado!", Severity.Success);
+            snackBar.Add("Etapa  actualizada!!", Severity.Success);
 
         }
         catch (HttpRequestException)
@@ -112,6 +127,10 @@
         }
 
 
+    }
+    void NavigateEstados()
+    {
+        navManager.NavigateTo($"EstadosProcesoRevision/{id}");
     }
 
 }
