--- a/Ecu911/Pages/Index.razor
+++ b/Ecu911/Pages/Index.razor
@@ -7,67 +7,40 @@
     <MudText Typo="Typo.h3" GutterBottom="true">Procesos Activos</MudText>
     
     <MudText Class="mb-8">Tus procesos son:</MudText>
+
+   
+@*        <MudPaper Class="pa-16 ma-2" Elevation="3">
+            <MudItem xs="12">
+                <MudText Typo="Typo.h4" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">No se econtraron procesos</MudText>
+            </MudItem>
+        </MudPaper>
+  *@
+   
+   <MudPaper Class="pa-16 ma-2" Elevation="3">
     <MudGrid>
-           <MudItem xs="12" sm="4" md="4" Class="d-flex  flex-column  align-center">
-
-@*                <MudTextField @bind-Value="searchString1" Placeholder="Buscar" Adornment="Adornment.Start" Label="Estado" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-               </MudItem>
-                <MudItem xs="12" sm="4" md="4" Class="d-flex  flex-column  align-center">
-            <MudTextField @bind-Value="searchString1" Placeholder="Buscar" Adornment="Adornment.Start" Label="Etapa" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-               </MudItem>*@
-
-                <MudItem xs="12" sm="4" md="4" Class="d-flex  flex-column  align-center">
-
+          <AuthorizeView Roles="SUPERADMINISTRADOR,ADMINISTRADOR">
+           <MudItem xs="12" sm="4" md="4" Class="d-flex  flex-column  align-center">            
+                <MudItem xs="12" sm="6" md="6" Class="d-flex  flex-column  align-center">
                 <MudSelect T="string" Placeholder="seleccione una unidad" @bind-Value="searchString1" Label="Sector opcional" AnchorOrigin="Origin.BottomCenter" OnOpen="BuscarUnidad" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0">
                 @foreach (var val in unidad)
                 {
-
                     <MudSelectItem Value="@val.UnidadId"> @val.nombre </MudSelectItem>
                 }
             </MudSelect>
+
                </MudItem>
+                <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled"  Color="Color.Info" OnClick="BuscarArea">Buscar</MudButton>
+                 
         </MudItem>
+            <MudItem xs="12" sm="4" md="4" Class="d-flex  flex-column  align-center">
+                <MudItem xs="12" sm="6" md="6" Class="d-flex  flex-column  align-center">
 
-
-
-
-
-@*
-
-        <MudTable Items="@Elements" FixedHeader="true"  Height="50%">
-            <HeaderContent>
-                <MudTh>Avance</MudTh>
-                <MudTh>Descripcion</MudTh>
-                <MudTh>Estado</MudTh>
-                <MudTh></MudTh>
-                <MudTh>Etapa</MudTh>
-                <MudTh>Proceso de Contratacion</MudTh>
-                <MudTh>Mes Planificado</MudTh>
-                <MudTh></MudTh>
-                <MudTh>Opciones</MudTh>
-                <MudTh></MudTh>
-            </HeaderContent>
-            <RowTemplate>
-               <MudTd DataLabel="Avance">@context.Avance</MudTd>
-                <MudTd DataLabel="Descripcion">@context.descripcion</MudTd>
-                <MudTd DataLabel="Estado">@context..Estado.tipoEstado</MudTd>
-                <MudTd DataLabel=""><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Tertiary" OnClick="@(e => NavigateActualizarEs(@context.ProcesoCompraId))">Actualizar</MudButton></MudTd>
-                <MudTd DataLabel="Etapa">@context.Etapa.tipoEtapa</MudTd>
-                <MudTd DataLabel="Proceso de Contratacion">@context.Procedimiento.tipoProcedimiento</MudTd>
-                <MudTd DataLabel="Proceso de Contratacion">@context.mesPlanificado</MudTd>
-                <MudTd DataLabel=""><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Info" OnClick="@(e => NavigateEstados(@context.ProcesoCompraId))">Revisar</MudButton></MudTd>
-                <MudTd DataLabel=""><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Warning" OnClick="@(e => NavigateObservaciones(@context.ProcesoCompraId))">Observaciones</MudButton></MudTd>
-                <MudTd DataLabel=""><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Warning" OnClick="@(e => NavigateAlertas(@context.ProcesoCompraId))">Alertas</MudButton></MudTd>
-            </RowTemplate>
-            <PagerContent>
-                <MudTablePager PageSizeOptions="new int[]{50, 100}" />
-            </PagerContent>
-        </MudTable>
-*@
-
-
-
-
+                    <MudText>Buscar Todos Los procesos</MudText>
+                </MudItem>
+                
+                <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled"  Color="Color.Info" OnClick="BuscarProcesosTodos">Buscar </MudButton>
+            </MudItem>
+        </AuthorizeView>
 
 
         <MudSimpleTable Hover="true" Dense="true" FixedHeader="@fixedheader" Striped="true" Style="@(fixedheader?"height:50%;":"")">
@@ -118,8 +91,16 @@
         </MudSimpleTable>
  
     </MudGrid>
+</MudPaper>
 
 
+
+    <MudPaper Class="pa-16 ma-2" Elevation="0">
+        <MudItem xs="12">
+            <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+            <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+        </MudItem>
+    </MudPaper>
 </MudCardContent>
 
 
@@ -127,55 +108,32 @@
 
 
 
-
-    bool fixed_header = true;
-    bool fixed_footer = false;
-
     private IEnumerable<ProcesoCompra> Elements = new List<ProcesoCompra>();
 
 
     private  bool fixedheader = true;
-    private string searchString1 ="";
+    private string searchString1= null;
     private  List<ProcesoCompra> procesos = new();
     private List<Unidad> unidad = new();
     private string fileNameRole;
 
 
-    //private Element selectedItem1 = null;
-    //private HashSet<Element> selectedItems = new HashSet<Element>();
-
-    //private IEnumerable<Element> Elements = new List<Element>();
-
-    //protected override async Task OnInitializedAsync()
-    //{
-    //    Elements = await httpClient.GetFromJsonAsync<List<Element>>("webapi/periodictable");
-    //}
-
-    //private bool FilterFunc1(Element element) => FilterFunc(element, searchString1);
-
-    //private bool FilterFunc(Element element, string searchString)
-    //{
-    //    if (string.IsNullOrWhiteSpace(searchString))
-    //        return true;
-    //    if (element.Sign.Contains(searchString, StringComparison.OrdinalIgnoreCase))
-    //        return true;
-    //    if (element.Name.Contains(searchString, StringComparison.OrdinalIgnoreCase))
-    //        return true;
-    //    if ($"{element.Number} {element.Position} {element.Molar}".Contains(searchString))
-    //        return true;
-    //    return false;
-    //}
-
-
-
-    int id = 0;
-
     protected override async Task OnInitializedAsync()
     {
-       
 
-       //fileNameRole = await ((CustomAuthenticationStateProvider)authProvider).GetAuthenticatedUserRole();
 
+
+        if (searchString1 == null)
+        {
+            await BuscarProcesosArea();
+
+        }
+ 
+
+    }
+
+    private async Task BuscarProcesosTodos()
+    {
         var response = await apiService.HttpClient.GetAsync("/api/ProcesoCompra");
         try
         {
@@ -188,9 +146,42 @@
             snackBar.Add($"{data.Message}", severity: Severity.Error);
         }
     }
+    private async Task BuscarArea()
+    {
+        if (searchString1 != null) 
+        {
+            
+            var response = await apiService.HttpClient.GetAsync($"/api/ProcesoCompra/area?idArea={searchString1}");
+            try
+            {
+                response.EnsureSuccessStatusCode();
+                procesos = await response.Content.ReadFromJsonAsync<List<ProcesoCompra>>();
+            }
+            catch (HttpRequestException)
+            {
+                var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+                snackBar.Add($"{data.Message}", severity: Severity.Error);
+            }
+        }
+       
+    }
 
 
-
+    private async Task BuscarProcesosArea()
+    {
+        var areaId = await sessionStorage.GetItemAsync<string>("Id-Area");
+        var response = await apiService.HttpClient.GetAsync($"/api/ProcesoCompra/area?idArea={areaId}");
+        try
+        {
+            response.EnsureSuccessStatusCode();
+            procesos = await response.Content.ReadFromJsonAsync<List<ProcesoCompra>>();
+        }
+        catch (HttpRequestException)
+        {
+            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            snackBar.Add($"{data.Message}", severity: Severity.Error);
+        }
+    }
 
     private async Task BuscarUnidad()
     {
@@ -206,7 +197,9 @@
             snackBar.Add($"{data.Message}", severity: Severity.Error);
         }
     }
- 
+
+
+
     void NavigateActualizarEs(string id)
     {
         navManager.NavigateTo($"ActualizarProceso/{id}");
