--- a/Ecu911/Pages/ObservacionesProceso.razor
+++ b/Ecu911/Pages/ObservacionesProceso.razor
@@ -26,11 +26,11 @@
         </MudSimpleTable>
     </MudGrid>
     </MudItem>
-    <MudItem xs="12" sm="12" md="12" Class="d-flex flex-column justify-center" Style="padding:30px">
-    <MudText Typo="Typo.h3" GutterBottom="true">Ingresar observaciones</MudText>
-  </MudItem>
+    
 </MudCardContent>
 
+
+<MudPaper Class="pa-16 ma-2" Elevation="3">
 
 <EditForm Model="@observacion">
    
@@ -43,13 +43,21 @@
         </MudButton>
     </MudContainer>
 
-    <MudContainer>
-        <MudButton OnClick="NavigateInicio" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
-            <MudText> Regresar</MudText>
-        </MudButton>
-    </MudContainer>
+   
 </EditForm>
+</MudPaper>
 
+<MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
+    <MudButton OnClick="NavigateInicio" ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Error" Size="Size.Large">
+        <MudText> Regresar</MudText>
+    </MudButton>
+</MudContainer>
+<MudPaper Class="pa-16 ma-2" Elevation="0">
+    <MudItem xs="12">
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">© 1822-2023</MudText>
+        <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
+    </MudItem>
+</MudPaper>
 
 @code {
 
