--- a/Ecu911/Shared/MainLayout.razor
+++ b/Ecu911/Shared/MainLayout.razor
@@ -6,6 +6,15 @@
         <MudLayout>
             <MudAppBar Elevation="0" Color="Color.Dark">
                 <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+                <MudMenu Color="Color.Inherit" Icon="@Icons.Material.Rounded.Person">
+                    <MudMenuItem>
+                        <MudNavLink Href="ChangePassword" Match="NavLinkMatch.Prefix" Icon="@Icons.Rounded.Password">CambiarContraseña</MudNavLink>
+                    </MudMenuItem>
+@*                    <MudMenuItem>
+                        <MudButton Variant="Variant.Text" StartIcon="@Icons.Filled.Logout" Color="Color.Error" OnClick="@LogOut" Target="_blank">Salir</MudButton>
+                    </MudMenuItem>*@
+                </MudMenu>
+                <MudText>Usuario:@context.User.Identity.Name</MudText>
                 <MudSpacer />
                 <MudButton Variant="Variant.Text" StartIcon="@Icons.Filled.Logout" Color="Color.Error" OnClick="@LogOut" Target="_blank">Salir</MudButton>
             </MudAppBar>
